@@ -1,6 +1,7 @@
 2 February 2018: Wouter
 	- Fix unfreed locks in log and arc4random at exit of unbound.
 	- unit test with valgrind
+	- Fix lock race condition in dns cache dname synthesis.
 
 1 February 2018: Wouter
 	- fix unaligned structure making a false positive in checklock
